# ChangeLog for dev-python/pgmagick
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.3.4.ebuild:
  Keyworded amd64.

*pgmagick-0.3.6 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.3.6.ebuild:
  Version bump [368].

*pgmagick-0.3.5 (11 May 2011)

  11 May 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.3.5.ebuild:
  Version bump [353].

*pgmagick-0.3.4 (25 Apr 2011)

  25 Apr 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.3.4.ebuild:
  Version bump [322].

  19 Feb 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.2.5.ebuild,
  pgmagick-0.3.2.ebuild:
  Keyworded x86.

  19 Feb 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.3.2.ebuild:
  Keyworded amd64.

*pgmagick-0.3.2 (20 Jan 2011)

  20 Jan 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.3.2.ebuild:
  Version bump [227].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  08 Nov 2010; James Rowe <jnrowe@gmail.com> pgmagick-0.2.5.ebuild:
  Keyworded x86.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> pgmagick-0.2.5.ebuild:
  Keyworded amd64.

  08 Oct 2010; James Rowe <jnrowe@gmail.com> pgmagick-0.2.5.ebuild:
  Keyworded ~x86.

*pgmagick-0.2.5 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com> +pgmagick-0.2.5.ebuild,
  +metadata.xml:
  Initial ebuild, by me.  Needed for sphinxcontrib-gruffygen.
