@@ -1,21 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pgmagick-0.3.2.tar.gz 30690 RMD160 d064ebb43add30bad8b68d0e1159622f8a76c29d SHA1 6b03b8adb341b879d1df69b165f491c6503f48e6 SHA256 7f2492d30c8810a033789b1e43ba91e26ca99581fd6bc622a7239a8aa29bd708
 DIST pgmagick-0.3.4.tar.gz 32147 RMD160 5d2d8287852d9577746f78116fa2f9956e70a814 SHA1 d3f5811c7365e270ebf4481314409bd9d1e6310a SHA256 716a6526ac1d3f3b923393e1987146f0430f7e304a3dab7c4edffc4218ec9648
 DIST pgmagick-0.3.5.tar.gz 32071 RMD160 ad09c42b82fa9170b3a72a7a5a525074c2c068a3 SHA1 581a312af6fd5acd4f14d7dd23aab88076d9a035 SHA256 c2ad929237f85d9cbdc968af3443be0e0713599e57a22d52b3179ee0e5ce4c21
 DIST pgmagick-0.3.6.tar.gz 32161 RMD160 8aa839303bd069882539336a9d4d77d82d4421b9 SHA1 852b2a11954b0fef573a03a2c2d1a32159ae6260 SHA256 5b28e54ad8df83fea9488b6750bb1d0d9c1152d1709f4f0f73f360a3cd9e4c44
-EBUILD pgmagick-0.3.2.ebuild 538 RMD160 fd1912540760298f1565ff6fbfaa6cd794ca142d SHA1 0bb848b3e65865b4668d8113619c04aa880f8b65 SHA256 6ee0b7eb9baeb344cc13ce4df82ceacc1ffa172b70a89a54270a8a02e560c6c6
-EBUILD pgmagick-0.3.4.ebuild 539 RMD160 8ac7ce95d8ea39b5298f0809297d00375bd8537e SHA1 dec81c07765036328521164d75c8d35c26b7549a SHA256 7294dbbc771e415d2cec94a7bb6b2a53dba9d928b0ced145674d7473d8498206
+EBUILD pgmagick-0.3.4.ebuild 538 RMD160 fd1912540760298f1565ff6fbfaa6cd794ca142d SHA1 0bb848b3e65865b4668d8113619c04aa880f8b65 SHA256 6ee0b7eb9baeb344cc13ce4df82ceacc1ffa172b70a89a54270a8a02e560c6c6
 EBUILD pgmagick-0.3.5.ebuild 540 RMD160 93b5704d763bbacee0dd8f909f234d230b6d63b3 SHA1 77cc5b42dca658dc691a49f9b3c54044c5e90eae SHA256 b1273cc0e153f6232c45e3c2d10d0b161a8c55405d7125e05dbe31f060b90652
 EBUILD pgmagick-0.3.6.ebuild 540 RMD160 93b5704d763bbacee0dd8f909f234d230b6d63b3 SHA1 77cc5b42dca658dc691a49f9b3c54044c5e90eae SHA256 b1273cc0e153f6232c45e3c2d10d0b161a8c55405d7125e05dbe31f060b90652
-MISC ChangeLog 1435 RMD160 fc527a26ff288e33d18ca65548c0f5ebf51d46b5 SHA1 7087d0d032bc3db2f68bbc932b516867a46c2a8a SHA256 c5590842b624083026655b672615ea3f72c1bf17f805221be22f1601ea479222
+MISC ChangeLog 1547 RMD160 4e9154789affe58a0aeb7c2623c8b40e9651b7a1 SHA1 856e9e9c21c4f33744bade33acf1ddf2a6cdea64 SHA256 b778613a991236b28e300dfefe9c7ceaa0d5385272340c601b5e64717ee029ab
 MISC metadata.xml 651 RMD160 9cc2db08397865c57d7b59376ffc692dc7440da8 SHA1 22195fd00ea2fde6b56c17ef450f02fa72c3aaf8 SHA256 0a1c8fbd8571aae583273bae2c4b709b4384c92691babe89293d3e5972f98477
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3cl/IACgkQzJrj3cAXR0ksxACaAzCBjt1JODo1x42dlKgWVB6x
-LGoAoJIN+M2ZYqm8998r4HNpGhEE/7jQ
-=XoJW
+iEYEARECAAYFAk3faeEACgkQzJrj3cAXR0kVqgCgiJHq/ugEAJTQ8OT2JIrlyYaG
+WH4An2cVGBWpMjghuX4MPpccEi/m26Dw
+=t7+R
 -----END PGP SIGNATURE-----
