@@ -1,22 +1,0 @@
-media-gfx/graphicsmagick dev-libs/boost[python] dev-util/pkgconfig >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-media-gfx/graphicsmagick dev-libs/boost[python] >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/p/pgmagick/pgmagick-0.3.2.tar.gz
-test
-http://pypi.python.org/pypi/pgmagick/
-MIT
-Yet Another Python wrapper for GraphicsMagick
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
