@@ -1,4 +1,3 @@
-REM 2011-05-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pgmagick-0.3.4 %a
 REM 2011-05-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-misc/libeatmydata-26.2 %a
 REM 2011-05-29 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-mscgen-0.4 %a
 REM 2011-05-29 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-mscgen-0.4 %a
