@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 May 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.3.2.ebuild,
+  pgmagick-0.3.4.ebuild:
+  Keyworded x86.
+
   25 May 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.3.4.ebuild:
   Keyworded amd64.
 
